--- a/templates/template.html
+++ b/templates/template.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>FlaskApp</title>
-</head>
-<body>
-{{data}}
-</body>
+  </head>
+  <body>
+    <table>
+        <tr>
+            <th>ID</th>
+            <th>UserID</th>
+            <th>Message</th>
+        </tr>
+    {%for item in data%} 
+        <tr>
+            <td>{{item[0]}}</td>
+            <td>{{item[1]}}</td>
+            <td>{{item[2]}}</td>
+        </tr>
+    {% endfor %}
+</table>
+  </body>
 </html>
